# AudioEditor

audio_editor/: .gitattributes  CMakeLists.txt  README.md  createprojectwindow.cpp  createprojectwindow.h  createprojectwindow.ui  echodialog.cpp  echodialog.h  echodialog.ui  equalizerdialog.cpp  equalizerdialog.h  equalizerdialog.ui  fadedialog.cpp  fadedialog.h  fadedialog.ui  helpwindow.cpp  helpwindow.h  helpwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  menubarmanager.cpp  menubarmanager.h  noisereductiondialog.cpp  noisereductiondialog.h  noisereductiondialog.ui  projectworkwindow.cpp  projectworkwindow.h  projectworkwindow.ui  resources.qrc  waveformwidget.cpp  waveformwidget.h
audio_editor/AudioEffects/: CMakeLists.txt  audioeffects.cpp  audioeffects.h  cechoeffect.cpp  cechoeffect.h  cequalizereffect.cpp  cequalizereffect.h  cfadeeffect.cpp  cfadeeffect.h  cfadeineffect.cpp  cfadeineffect.h  cfadeouteffect.cpp  cfadeouteffect.h  cnoisereductioneffect.cpp  cnoisereductioneffect.h
audio_editor/tests/: CMakeLists.txt  tst_effects_cechoeffect.cpp  tst_effects_cequalizereffect.cpp  tst_effects_cfadeeffect.cpp  tst_effects_cfadeineffect.cpp  tst_effects_cfadeouteffect.cpp  tst_effects_cnoisereductioneffect.cpp
